fixed alignment for images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@
 
 .Directory{
   font-family: 'Courier New', Courier, monospace;
-  font-display: ;
   font-size: 18px;
   margin-bottom: 100px;
   margin-top: 300px;
@@ -75,7 +74,8 @@
   height: 500px; 
   display: inline-block;
   vertical-align: middle;
-  margin-left: 30px; 
+  margin-left: 110px; 
+  margin-right: 10px;
 }
 
 .card-pic{
